--- a/Web.Statu/App_Code/SearchResults.cshtml
+++ b/Web.Statu/App_Code/SearchResults.cshtml
@@ -501,8 +501,7 @@
         }
     </td>
     <td class="text-nowrap">
-        <a href="detail?idDotace=@item.IdDotace">Detail</a> | 
-        <a href="@item.UrlZdroje">Zdroj</a>
+        <a href="/dotace/detail/@item.IdDotace">Detail</a>
     </td>
 </tr>
 }
