--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -162,7 +162,7 @@
                     
                     <span class="tag">
                         <a href="https://www.hlidacstatu.cz/texty/neobvykle-obvykla-cena-is-pro-dalnicni-znamky-podle-znalce-je-zisk-643-milionu-ze-zakazky-za-98-milionu-obvykly/">
-                            Elektronické dálniční známky vyjdou dráž než papírové
+                            Neobvykle obvyklá cena IS pro dálniční známky.
                             <span class="glyphicon glyphicon-share"></span>
                         </a>
                     </span>
