--- a/Web.Statu/Views/Home/Reports/22_Urady_S_Urady.cshtml
+++ b/Web.Statu/Views/Home/Reports/22_Urady_S_Urady.cshtml
@@ -22,7 +22,7 @@
     <div class="form-group">
         <label for="dodavatelico" class="col-sm-2 control-label">IČO úřadu, který dodává ostatním</label>
         <div class="col-sm-10">
-            <input type="number" class="form-control" value="@dodavico" name="dodavatelico" placeholder="IČO dodavatele">
+            <input class="form-control" value="@dodavico" name="dodavatelico" placeholder="IČO dodavatele">
         </div>
     </div>
     <div class="form-group">
