--- a/Web.Statu/Views/Home/Reporty.cshtml
+++ b/Web.Statu/Views/Home/Reporty.cshtml
@@ -17,7 +17,6 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li><a href="@Url.Action("Smlouvy","Home")">Hlídač Smluv</a></li>
         <li class="active">@ViewBag.Title</li>
     </ol>
     }
@@ -117,16 +116,42 @@
         <div class="col-sm-12 col-sm-4">
             <h3 style="margin-top:0;">Osoby a firmy</h3>
             <div class="col-block-shadow newbadge top-right">
+                <h3><a href="/Report/25">Které politické strany mají největší podíl na řízení státu?</a></h3>
+                <p>
+                    Které strany a hnutí v ČR dominují?
+                </p>
+                <p><a class="btn btn-default" href="/Report/24" role="button">Podrobnosti »</a></p>
+            </div>
+            <div class="col-block-shadow">
+                <h3><a href="/Report/24">2018: Osoby s největšími obchodními vztahy se státem dle registru smluv</a></h3>
+                <p>
+                    Osoby s největšími obchodními vztahy se státem dle registru smluv v roce 2018
+                </p>
+                <p><a class="btn btn-default" href="/Report/24" role="button">Podrobnosti »</a></p>
+            </div>
+            <div class="col-block-shadow ">
+                <h3><a href="/Report/23">2018: Firmy a holdingy s největšími obchodními vztahy se státem</a></h3>
+                <p>
+                    Firmy a holdingy s největšími obchodními vztahy se státem dle registru smluv v roce 2018
+                </p>
+                <p><a class="btn btn-default" href="/Report/23" role="button">Podrobnosti »</a></p>
+            </div>
+            <div class="col-block-shadow ">
+                <h3><a href="/Report/21">Členové vlády 2014-2018</a></h3>
+                <p>Kdo jsou poradci na úřadu vlády? Obchodují jejich firmy se státem? Hrozí jim nějaký konflikt zájmů?</p>
+                <p><a class="btn btn-default" href="/Report/21" role="button">Podrobnosti »</a></p>
+            </div>
+            <div class="col-block-shadow">
                 <h3><a href="/Report/19">Poradci na úřadu vlády</a></h3>
                 <p>Kdo jsou poradci na úřadu vlády? Obchodují jejich firmy se státem? Hrozí jim nějaký konflikt zájmů?</p>
                 <p><a class="btn btn-default" href="/Report/19" role="button">Podrobnosti »</a></p>
             </div>
-            <div class="col-block-shadow newbadge top-right">
+            <div class="col-block-shadow">
                 <h3><a href="/Report/18">Krajští hejtmani v 2018</a></h3>
                 <p>Sponzorují krajští hejtmani politické strany? Jaké mají obchodní vztahy se státem?</p>
                 <p><a class="btn btn-default" href="/Report/18" role="button">Podrobnosti »</a></p>
             </div>
-            <div class="col-block-shadow newbadge top-right">
+            <div class="col-block-shadow">
                 <h3><a href="/Report/16">Poslanci zvolení do parlamentu v 2017</a></h3>
                 <p>Sponzorují noví poslanci politické strany? A mají obchodní vztahy se státem?</p>
                 <p><a class="btn btn-default" href="/Report/16" role="button">Podrobnosti »</a></p>
