--- a/Web.Statu/Views/Home/Reports/25a_MinisterstvaStrany.cshtml
+++ b/Web.Statu/Views/Home/Reports/25a_MinisterstvaStrany.cshtml
@@ -162,7 +162,7 @@
     <h4>Jak dlouho zodpovídají jednotlivé politické strany za fungování státu a jednotlivé resorty?</h4>
     <h4>Které strany jsou tradiční a které se jimi stávají?</h4>
     <div>
-        Na této stránce je pracujeme s počtem dní, které jednotlivé strany řídili. Počítáme jak nejdelší nepřerušené období řízení rezortů, tak celkový počet dní.
+        Na této stránce je pracujeme s počtem dní, které jednotlivé strany řídily. Počítáme jak nejdelší nepřerušené období řízení rezortů, tak celkový počet dní.
     </div>
     <div>
         Přes odkazy níže můžete změnit začátek počítaného období či si vypsat report pouze pro některou ze stran.
