--- a/Web.Statu/Content/socialBanner.css
+++ b/Web.Statu/Content/socialBanner.css
@@ -3,6 +3,11 @@ body, p, div, span {
     font-family: 'Cabin', sans-serif;
 }
 
+h1, h2, h3, h4 {
+    margin-top:0;
+    padding-top:0;
+}
+
 .text-info {}
 .text-warning {}
 .text-danger {
@@ -32,14 +37,14 @@ margin-bottom:20px;
     color: white;
 }
 
-    .mytxt ul.bigpoint {
+    .mytxt ul {
         position: relative;
         list-style: none;
         margin-left: 0;
         padding-left: 1.2em;
     }
 
-        .mytxt ul.bigpoint li:before {
+        .mytxt ul li:before {
             content: "●";
             position: absolute;
             left: 0;
@@ -50,9 +55,12 @@ margin-bottom:20px;
         color: #F6C074;
     }
 
-    .mytxt i {
+    .mytxt strong {
         font-style: normal;
         font-weight: 700;
+    }
+    .mytxt i {
+        font-style: italic;
     }
 
 .picture {
