--- a/Web.Statu/Views/Dotace/_SearchResult.cshtml
+++ b/Web.Statu/Views/Dotace/_SearchResult.cshtml
@@ -53,6 +53,7 @@ else
                     @(PluralForm.Get((int)Model.Result.Total, "Nalezena {0} dotace;Nalezeny {0} dotace;Nalezeno {0} dotací"))
                     v celkové hodnotě @HlidacStatu.Util.RenderData.NicePrice((decimal)Model.Result.Aggregations.Sum("souhrn").Value).
                 </h2>
+                <span>* Celková čáska je námi vypočítaná hodnota dotace, protože ne u všech zdrojů jsou částky uvedeny stejným způsobem. Známe-li čerpanou částku, použijeme tuto hodnotu. Pokud čerpanou částku zdroj neuvádí, používáme celkovou částku schválené dotace.</span>
             </div>
 
         </div>
